--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
