--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/adapter-neon": "^6.1.0",
@@ -20,6 +24,7 @@
     "framer-motion": "^11.12.0",
     "jotai": "^2.10.3",
     "jotai-tanstack-query": "^0.9.0",
+    "lexorank": "^1.0.5",
     "next": "14.2.10",
     "next-auth": "^4.24.11",
     "react": "19.0.0-rc-66855b96-20241106",
